# file-reader

./: pyproject.toml
src/olfilereader/: base.py  models.py  settings.py
tests/: test_integration_module.py  test_package.py
tests/fixtures/data/: text.txt
