[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]


[project]
name = "olfilereader"
description = ""
authors = [
    {name = "osoken"},
]
dynamic = [
    "version", 
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: Japanese",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
]

dependencies = [
]

[project.urls]
Source = "https://github.com/osoekawaitlab/file-reader"

[tool.setuptools]
packages=["olfilereader"]

[tool.setuptools.package-data]
olfilereader = ["py.typed"]

[project.optional-dependencies]
dev=[
    "black",
    "flake8",
    "pyproject-flake8",
    "pytest",
    "mypy",
    "tox",
    "isort",
    "pytest-mock",
    "pytest-cov",
    "pytest-random-order",
]
prod=[
]
docs=[
]

[tool.pytest.ini_options]
addopts = ["-sv", "--random-order", "--doctest-modules", "--cov=olfilereader", "--cov-report=xml", "--cov-report=term-missing"]
testpaths = ["tests", "src/olfilereader"]
filterwarnings = [
    "error",
]
markers = [
]

[tool.black]
line-length = 120
target-version = ['py310']

[tool.flake8]
max-line-length = 120
extend-ignore = "E203,E701"
per-file-ignores = ["*.pyi:E301,E302"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
mypy_path = "stubs/"

[tool.pydantic.mypy]
init_typed = true

[tool.isort]
profile = "black"

[tool.tox]
legacy_tox_ini = """
[tox]
skipsdist = true
envlist = py310

[testenv]
setenv =
    VIRTUALENV_PIP = 24.2
deps =
    -e .[dev]
commands =
    black src/ tests
    isort src/ tests
    pytest
    pflake8 src/ tests/ stubs/
    mypy src/olfilereader --strict --show-traceback
    mypy tests --strict
"""
